# stock_strategy_lab

./: .env.example  .gitignore  README.md  pyproject.toml  usage_scenarios.md
configs/: agent.yaml  app.yaml  backtest.yaml  budget.yaml  data_sources.yaml  qmt.yaml  safety.yaml
src/strategy_lab/: __init__.py  artifacts.py  cli.py
src/strategy_lab/agents/: __init__.py  backend.py  budget_agent.py  budget_critic_agent.py  critic_agent.py  data_agent.py  model_factory.py  portfolio_agent.py  portfolio_critic_agent.py  signal_agent.py
src/strategy_lab/config/: __init__.py  loader.py
src/strategy_lab/schemas/: data.py
src/strategy_lab/services/: __init__.py  attempt_comparison.py  attempt_evaluation.py  attempt_summary.py  batch_attempt_evaluation.py  budget_attempt_summary.py  budget_backtest.py  budget_batch_policy_evaluation.py  budget_data_panel.py  budget_data_split.py  budget_parameter_search.py  budget_policy_engine.py  budget_policy_evaluation.py  budget_profile.py  budget_run.py  budget_session.py  budget_stage_attribution.py  data_format.py  data_service.py  data_split.py  image_review.py  market_profile.py  parameter_search.py  portfolio_data_split.py  portfolio_evaluation.py  portfolio_fusion_engine.py  portfolio_profile.py  portfolio_run.py  portfolio_session.py  portfolio_signal_profile.py  signal_backtest.py  signal_run.py  signal_session.py  stage_attribution.py  strategy_artifact.py
src/strategy_lab/signals/: __init__.py  base.py
src/strategy_lab/tools/: __init__.py  agent_call_tools.py
src/strategy_lab/workflow/: __init__.py  state.py
(+80 files in other folders)
